// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAttrs model but no attributes 1`] = `[]`;

exports[`parseAttrs model but no attributes 2`] = `[]`;

exports[`parseAttrs model but no attributes 3`] = `[]`;

exports[`parseAttrs parses 1`] = `
[
  {
    "as": {
      "fixture": [
        "'string'",
      ],
      "fixtureAlt": [
        "'updated'",
      ],
      "migration": [
        "t.string('title')",
      ],
      "model": [
        "@Column",
        "title: string",
      ],
      "zod": [
        "title: z.string()",
      ],
    },
    "name": "title",
  },
  {
    "as": {
      "fixture": [
        "'some text'",
      ],
      "fixtureAlt": [
        "'a different text'",
      ],
      "migration": [
        "t.text('content')",
      ],
      "model": [
        "@Column(DataType.TEXT)",
        "content: string",
      ],
      "zod": [
        "content: z.string()",
      ],
    },
    "name": "content",
  },
  {
    "as": {
      "fixture": [
        "5150",
      ],
      "fixtureAlt": [
        "1337",
      ],
      "migration": [
        "t.int('count')",
      ],
      "model": [
        "@Column",
        "count: number",
      ],
      "zod": [
        "count: z.number()",
      ],
    },
    "name": "count",
  },
  {
    "as": {
      "fixture": [
        "{"hello": "world"}",
      ],
      "fixtureAlt": [
        "{"hello": "crewl world"}",
      ],
      "migration": [
        "t.json('settings')",
      ],
      "model": [
        "@Column(DataType.JSON)",
        "settings: any",
      ],
      "zod": [
        "settings: z.any()",
      ],
    },
    "name": "settings",
  },
  {
    "as": {
      "fixture": [
        "new Date('1986-03-24')",
      ],
      "fixtureAlt": [
        "new Date('1981-09-08')",
      ],
      "migration": [
        "t.date('createdAt')",
      ],
      "model": [
        "@Column",
        "createdAt: Date",
      ],
      "zod": [
        "createdAt: z.date()",
      ],
    },
    "name": "createdAt",
  },
  {
    "as": {
      "fixture": [
        "true",
      ],
      "fixtureAlt": [
        "false",
      ],
      "migration": [
        "t.bool('isDeleted')",
      ],
      "model": [
        "@Column",
        "isDeleted: boolean",
      ],
      "zod": [
        "isDeleted: z.boolean()",
      ],
    },
    "name": "isDeleted",
  },
]
`;

exports[`parseAttrs parses 2`] = `
[
  {
    "as": {
      "fixture": [
        "'string'",
      ],
      "fixtureAlt": [
        "'updated'",
      ],
      "migration": [
        "t.string('title')",
      ],
      "model": [
        "@Column",
        "title: string",
      ],
      "zod": [
        "title: z.string()",
      ],
    },
    "name": "title",
  },
  {
    "as": {
      "fixture": [
        "'some text'",
      ],
      "fixtureAlt": [
        "'a different text'",
      ],
      "migration": [
        "t.text('content')",
      ],
      "model": [
        "@Column(DataType.TEXT)",
        "content: string",
      ],
      "zod": [
        "content: z.string()",
      ],
    },
    "name": "content",
  },
]
`;
